--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,26 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div *ngFor="let user of users$" style="text-align:center">
-  <h1>{{ user.name }} - {{user.id}}</h1>
+<app-header></app-header>
+<app-nav></app-nav>
+
+<div class="content-wrapper">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 col-lg-4"></div>
+      <div class="col-md-12 col-lg-8"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-12"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-12 col-lg-6"></div>
+      <div class="col-md-12 col-lg-6"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-12"></div>
+    </div>
+  </div>
 </div>
+
+<app-footer></app-footer>
 
 <router-outlet></router-outlet>
