--- a/src/app/pages/item-list/item-list.component.html
+++ b/src/app/pages/item-list/item-list.component.html
@@ -9,11 +9,11 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let item of products$" [routerLink]="[ '/item/', item.id]">
-      <th scope="row">{{item.id}}</th>
-      <td>{{item.name}}</td>
-      <td>{{item.category}}</td>
-      <td>{{item.price}}</td>
+    <tr *ngFor="let item of products$" >
+      <th scope="row" [routerLink]="[ '/item/', item.id]">{{item.id}}</th>
+      <td [routerLink]="[ '/item/', item.id]">{{item.name}}</td>
+      <td [routerLink]="[ '/item/', item.id]">{{item.category}}</td>
+      <td [routerLink]="[ '/item/', item.id]">{{item.price}}</td>
       <td style="text-align: center"><button type="button" class="btn btn-success" (click)="addToChart(item.id)">Add to chart</button></td>
     </tr>
   </tbody>
